chore: fix grid gap

--- a/src/components/command-bar/commands/search/unified-search/components/suggested-pages/suggested-page.module.css
+++ b/src/components/command-bar/commands/search/unified-search/components/suggested-pages/suggested-page.module.css
@@ -14,7 +14,7 @@
 .content {
 	display: flex;
 	align-items: center;
-	gap: 12px;
+	gap: 8px;
 }
 
 .icon {
